<resources>
    <string name="app_name">CityEvents</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiYmFmaSIsImEiOiJjbGl5aWdvODkwMTAzM3NsNHAxZTA5a2QwIn0.yrhMLMo5VVC8cxtMtY3usg</string>

    <!--Bottom menu-->
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="events">Events</string>
    <string name="add_event">Add event</string>
    <string name="statistic">Statistic</string>

    <string name="location_permission">Location permission is needed</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Sign in screen-->
    <string name="sign_in">Sign in</string>

    <!--Welcome screen-->
    <string name="welcome">Welcome to CityEvents</string>
    <string name="welcome_desc">This application is a platform for participants and event organizers</string>
    <string name="search_event">Looking for an event</string>
    <string name="organizer">I\'m the organizer</string>

    <!--Events screen-->
    <string name="date_and_place">Date and place of the event</string>
    <string name="description">Description</string>

    <!--Account screen-->
    <string name="exit">Exit</string>

    <!--Event info screen-->
    <string name="craft_event">Craft Your Event</string>
    <string name="add_name">Add a captivating name for your event</string>
    <string name="select_category">Select a fitting category to classify your event</string>
    <string name="craft_description">Craft a detailed description to entice attendees</string>
    <string-array name="event_categories">
        <item>Select a category</item>
        <item>Culture</item>
        <item>Sport</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Social</item>
        <item>Children &amp; Family</item>
    </string-array>

    <!--Add images screen-->
    <string name="add_photos">Add photos that will describe the atmosphere of your event well</string>
    <string name="possible_add_photo">It is possible to add a photo after the publication of the event</string>
    <string name="add">Add</string>
    <string name="next">Next</string>

    <!--Location picker screen-->
    <string name="choose_place">Choose a place where your event will take place</string>
    <string name="address_autofill_query_hint">Where is the event?</string>
    <string name="address_autofill_error_select">Unable to resolve selected suggestion</string>
    <string name="address_autofill_pin_correction_note">Drag map to correct pin position</string>
    <string name="address_autofill_error_pin_correction">Unable to locate selected coordinate</string>
    <string name="back">Back</string>

    <!--Date&time picker screen-->
    <string name="select_date_time">Select the date and time when your event will take place</string>
    <string name="done">Done</string>
    <string name="date_location_and_cost_of_the_event">Date, location and cost of the event</string>
    <string name="adress">New York, Elbrus Street, 3</string>
    <string name="where_adress">YOD Sports Club</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="sunday">Воскресенье</string>
    <string name="write_a_description_of_the_venue">Write a description of the venue</string>
    <string name="save">Save</string>
    <string name="social">Social</string>
    <string name="entertainment">Entertainment</string>
    <string name="family">Children &amp; Family</string>
    <string name="education">Education</string>
    <string name="culture">Culture</string>
    <string name="sport">Sport</string>
</resources>